# ScanChain

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  create_bucket.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_app.py  test_dcellar_upload.py
contracts/: ProductAuthenticity.sol
data/: batches.json  products.json  scans.json  sessions.json  users.json
public/: auth-test.html  dashboard.html  dcellar-upload.html  index.html  login.html  qr-test.html  register.html  scan.html  simple-auth-test.html  test-product.json  test.html  upload.html  verify.html
routes/: auth_routes.py
services/: auth_service.py  blockchain_service.py  database_service.py  greenfield_service.py  qr_service.py
test-data/: sample-product.json
